--- a/react-assignment/src/App.css
+++ b/react-assignment/src/App.css
@@ -37,12 +37,18 @@ body {
 }
 
 .InnerTechniqueCardContainer1 {
-  width: 131.08px;
+  width: 129.87px;
+  font-size: 10px;
+  text-align: center;
+  vertical-align: middle;
 }
 
 .InnerTechniqueCardContainer2, .InnerTechniqueCardContainer3, .InnerTechniqueCardContainer4, .InnerTechniqueCardContainer5, .InnerTechniqueCardContainer6, .InnerTechniqueCardContainer7, .InnerTechniqueCardContainer8, .InnerTechniqueCardContainer9, .InnerTechniqueCardContainer10, .InnerTechniqueCardContainer11, .InnerTechniqueCardContainer12, .InnerTechniqueCardContainer13, .InnerTechniqueCardContainer14{
   margin-left: 5px;
-  width: 131.08px;
+  width: 129.87px;
+  font-size: 10px;
+  text-align: center;
+  vertical-align: middle;
 }
 
 .InnerTechniqueCardContainer1 > * {
